syntax = "proto3";

package oapi.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/technicallyjosh/protoc-gen-openapi/api/oapi/v1;oapiv1";

extend google.protobuf.FieldOptions {
  // Marks the field as required.
  bool required = 5150;

  // Value for the example on the field. This overrides any examples in
  // comments.
  string example = 5151;

  // Options for a field.
  FieldOptions options = 5152;
}

message FieldOptions {
  // Minimum value for the field.
  optional double min = 1;

  // Maximum value for the field.
  optional double max = 2;

  // Minimum length for the field.
  optional uint64 min_length = 3;

  // Maximum length for the field.
  optional uint64 max_length = 4;

  // Minimum amount of items for an array type.
  optional uint64 min_items = 5;

  // Maximum amount of items for an array type.
  optional uint64 max_items = 6;

  // All items in the array should be unique.
  optional bool unique_items = 7;

  // Minimum amount of properties that the field object can have.
  optional uint64 min_properties = 8;

  // Maximum amount of properties that the field object can have.
  optional uint64 max_properties = 9;

  // Regex pattern for the field to match. Refer to
  // https://www.ecma-international.org/ecma-262/5.1/#sec-15.10.1
  optional string pattern = 10;

  // Minimum value of min excluding the defined. e.g. If min=100, 101 is the
  // min.
  optional bool exclusive_min = 11;

  // Maximum value of max excluding the defined. e.g. If max=100, 99 is the max.
  optional bool exclusive_max = 12;

  // The number that the value must be a multiple of.
  optional double multiple_of = 13;

  // Values that value must be one of.
  repeated string enum = 14;

  // The format of the value.
  optional string format = 15;

  // Marks the field as required.
  bool required = 16;

  // Use the specified type instead of the defined type. This is useful when you
  // are using something like google.protobuf.Timestamp and it really should be
  // a string.
  optional string as_type = 17;
}
